# ucg

./: .appveyor.yml  .gitignore  .travis.yml  README.md  RULES.md
Assignment_1/src/hull/: main.cpp
Assignment_1/src/inside/: main.cpp
Assignment_2/: CMakeLists.txt  README.md
Assignment_2/src/: utils.h
Assignment_3/: CMakeLists.txt  README.md
Assignment_3/src/: utils.h
Assignment_4/: CMakeLists.txt  NOTES.md  README.md
Assignment_5/: CMakeLists.txt  README.md
Assignment_5/extra/: main_blending.cpp  main_border.cpp  main_depth.cpp  main_positions.cpp  main_properties.cpp  main_view.cpp
Assignment_5/src/: main.cpp
Assignment_6/: CMakeLists.txt  README.md
Assignment_6/src/: helpers.cpp  helpers.h  main.cpp
Assignment_7/: README.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
